[package]
name = "Kinesis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
dotenvy = "0.15"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wtransport = "0.7.1"
